# AlgorithmLessonExperiment

./: Cargo.toml  README.md
AlgorithmTask2/: Cargo.toml
AlgorithmTask2/data/: data1.txt  data2.txt  data3.txt
AlgorithmTask2/examples/: BUM.rs  IS.rs  QD3P.rs  RQ.rs  TDM.rs
AlgorithmTask2/src/: main.rs
AlgorithmTask3/: Dijkstra priority queue.cpp
AlgorithmTask3/examples/: idea1.rs  idea2.rs  idea3.rs
AlgorithmTask3/src/: main.rs
AlgorithmTask4/: Cargo.toml  corpus.txt  query.txt
AlgorithmTask4/src/: main.rs
src/: main.rs
