[package]
name = "AlgorithmTask2"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0"

[[example]]
name = "IS"
path = "./examples/IS.rs"
[[example]]
name = "TDM"
path = "./examples/TDM.rs"
[[example]]
name = "BUM"
path = "./examples/BUM.rs"
[[example]]
name = "RQ"
path = "./examples/RQ.rs"
[[example]]
name = "QD3P"
path = "./examples/QD3P.rs"